--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Package Tweak
+name: Build, Package, and Release Tweak
 
 on:
   push:
@@ -27,8 +27,23 @@ jobs:
     - name: Build tweak
       run: make package
 
-    - name: Upload package
-      uses: actions/upload-artifact@v2
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: cpuinfooverlay-package
-        path: ./packages/*.deb
+        tag_name: v${{ github.run_number }}
+        release_name: Release v${{ github.run_number }}
+        draft: false
+        prerelease: false
+
+    - name: Upload Package to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./packages/*.deb
+        asset_name: cpuinfooverlay.deb
+        asset_content_type: application/octet-stream
