--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y dpkg fakeroot
-        sudo apt-get install -y ldid gnu-tar
+        sudo apt-get install -y dpkg fakeroot ldid gnu-tar
 
     - name: Build tweak
       run: make package
