--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -1,4 +1,4 @@
-name: Build Tweak
+name: Build, Package, and Release Tweak
 
 on:
   push:
@@ -18,6 +18,7 @@ jobs:
         git clone https://github.com/theos/theos.git $HOME/theos
         echo "export THEOS=$HOME/theos" >> $GITHUB_ENV
         echo "export PATH=$HOME/theos/bin:$PATH" >> $GITHUB_ENV
+        echo "export THEOS_MAKE_PATH=$HOME/theos/makefiles" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
