--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Change this to your main branch if different
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 jobs:
   build:
