--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -23,19 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y dpkg fakeroot
+        sudo apt-get install -y dpkg fakeroot ldid gnu-tar || echo "Installation of ldid or gnu-tar failed"
         sudo apt-get clean
-        # Install ldid
-        wget https://github.com/tpoechtrager/ldid/releases/download/v2.1.2/ldid
-        sudo mv ldid /usr/local/bin/
-        sudo chmod +x /usr/local/bin/ldid
-        # Install gnu-tar
-        wget http://ftp.gnu.org/gnu/tar/tar-latest.tar.gz
-        tar -xzf tar-latest.tar.gz
-        cd tar-*
-        ./configure
-        make
-        sudo make install
 
     - name: Build tweak
       run: make package
