--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -27,8 +27,7 @@ jobs:
         sudo apt-get install -y dpkg fakeroot || echo "Installation of dpkg or fakeroot failed"
         sudo apt-get clean
         # Install ldid
-        wget https://github.com/tpoechtrager/ldid/releases/download/v2.1.2/ldid.zip
-        unzip ldid.zip
+        wget https://github.com/tpoechtrager/ldid/releases/download/v2.1.2/ldid
         sudo mv ldid /usr/local/bin/
         sudo chmod +x /usr/local/bin/ldid
         # Install gnu-tar
