--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -23,8 +23,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y dpkg fakeroot
+        sudo apt-get update || echo "Failed to update package list"
+        sudo apt-get install -y dpkg fakeroot || echo "Packages are already up-to-date"
         sudo apt-get clean
         # Install ldid
         wget -qO- https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_iphoneos-arm64 > ldid
