--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - name: Checkout repository
@@ -23,14 +23,13 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update || { echo "Failed to update package list"; exit 1; }
-        sudo apt-get install -y dpkg fakeroot || { echo "Packages are already up-to-date or another error occurred"; exit 0; }
-        sudo apt-get clean
-        # Install ldid
-        wget -qO- https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_iphoneos-arm64 > ldid || { echo "Failed to download ldid"; exit 1; }
-        sudo install -m 755 ldid /usr/local/bin/ldid || { echo "Failed to install ldid"; exit 1; }
-        # Verify ldid installation
-        if ! command -v ldid > /dev/null; then echo "ldid installation failed"; exit 1; fi
+        # macOS uses Homebrew for package management
+        brew update
+        brew install dpkg fakeroot || { echo "Failed to install dpkg or fakeroot"; exit 1; }
+        
+        # Download and install ldid for macOS
+        curl -LO https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_macosx_x86_64
+        sudo install -m 755 ldid_macosx_x86_64 /usr/local/bin/ldid || { echo "Failed to install ldid"; exit 1; }
 
     - name: Verify dependencies installation
       run: |
