--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         # macOS uses Homebrew for package management
         brew update
-        brew install dpkg fakeroot || { echo "Failed to install dpkg or fakeroot"; exit 1; }
+        brew install dpkg || { echo "Failed to install dpkg"; exit 1; }
         
         # Download and install ldid for macOS
         curl -LO https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_macosx_x86_64
@@ -34,7 +34,6 @@ jobs:
     - name: Verify dependencies installation
       run: |
         dpkg --version || { echo "Failed to verify dpkg"; exit 1; }
-        fakeroot --version || { echo "Failed to verify fakeroot"; exit 1; }
         ldid -h || { echo "Failed to verify ldid"; exit 1; }
 
     - name: Build tweak
