--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -1,10 +1,10 @@
-name: Build, Package, and Release Tweak
+name: Build iOS dylib on macOS
 
 on:
   push:
     branches:
-      - main  # Change this to your main branch if different
-  workflow_dispatch:  # Allows manual triggering of the workflow
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,31 +14,37 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: 'latest-stable'
+
     - name: Set up Theos
       run: |
         git clone --depth 1 https://github.com/theos/theos.git $HOME/theos
         echo "THEOS=$HOME/theos" >> $GITHUB_ENV
         echo "$HOME/theos/bin:$PATH" >> $GITHUB_PATH
         echo "THEOS_MAKE_PATH=$HOME/theos/makefiles" >> $GITHUB_ENV
+        # Set SDKROOT and THEOS_PLATFORM_NAME for iOS
+        echo "SDKROOT=$(xcodebuild -version -sdk iphoneos Path)" >> $GITHUB_ENV
+        echo "THEOS_PLATFORM_NAME=iphoneos" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
-        # macOS uses Homebrew for package management
         brew update
-        brew install dpkg || { echo "Failed to install dpkg"; exit 1; }
-        
-        # Download and install ldid for macOS
+        brew install dpkg
+        # Assuming ldid is needed for signing
         curl -LO https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_macosx_x86_64
-        sudo install -m 755 ldid_macosx_x86_64 /usr/local/bin/ldid || { echo "Failed to install ldid"; exit 1; }
+        sudo install -m 755 ldid_macosx_x86_64 /usr/local/bin/ldid
 
     - name: Verify dependencies installation
       run: |
         dpkg --version || { echo "Failed to verify dpkg"; exit 1; }
         ldid -h || { echo "Failed to verify ldid"; exit 1; }
 
-    - name: Build tweak
+    - name: Build dylib
       run: |
-        make package FINALPACKAGE=1 || { echo "Build failed"; exit 1; }
+        make || { echo "Build failed"; exit 1; }
 
     - name: Create Release
       id: create_release
@@ -57,6 +63,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./${{ github.workspace }}/packages/*.deb
-        asset_name: cpuinfooverlay_${{ github.run_number }}.deb
+        asset_path: ./${{ github.workspace }}/packages/*.dylib
+        asset_name: SystemInfo_${{ github.run_number }}.dylib
         asset_content_type: application/octet-stream
