--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -1,4 +1,4 @@
-name: Build iOS dylib on macOS
+name: Build iOS dylib on Ubuntu
 
 on:
   push:
@@ -8,45 +8,37 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Xcode
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: 'latest-stable'
-
     - name: Set up Theos
       run: |
+        sudo apt-get update
+        sudo apt-get install -y git
         git clone --depth 1 https://github.com/theos/theos.git $HOME/theos
         echo "THEOS=$HOME/theos" >> $GITHUB_ENV
         echo "$HOME/theos/bin:$PATH" >> $GITHUB_PATH
         echo "THEOS_MAKE_PATH=$HOME/theos/makefiles" >> $GITHUB_ENV
-        # Set SDKROOT and THEOS_PLATFORM_NAME for iOS
-        echo "SDKROOT=$(xcodebuild -version -sdk iphoneos Path)" >> $GITHUB_ENV
-        echo "THEOS_PLATFORM_NAME=iphoneos" >> $GITHUB_ENV
-        # Additional environment variables to force iOS build
-        echo "THEOS_PLATFORM_SDK=iphoneos" >> $GITHUB_ENV
-        echo "THEOS_TARGET_PLATFORM=iphone" >> $GITHUB_ENV
 
     - name: Install dependencies
       run: |
-        brew update
-        brew install dpkg
-        curl -LO https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_macosx_x86_64
-        sudo install -m 755 ldid_macosx_x86_64 /usr/local/bin/ldid
+        sudo apt-get install -y dpkg fakeroot ldid
+        # ldid might need to be installed manually if not available via apt
+        # wget -qO- https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_iphoneos-arm64 > ldid
+        # sudo install -m 755 ldid /usr/local/bin/ldid
 
     - name: Verify dependencies installation
       run: |
         dpkg --version || { echo "Failed to verify dpkg"; exit 1; }
+        fakeroot --version || { echo "Failed to verify fakeroot"; exit 1; }
         ldid -h || { echo "Failed to verify ldid"; exit 1; }
 
     - name: Build dylib
       run: |
-        make THEOS_PLATFORM_NAME=iphoneos || { echo "Build failed"; exit 1; }
+        make || { echo "Build failed"; exit 1; }
 
     - name: Create Release
       id: create_release
