--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -25,16 +25,16 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get install -y dpkg fakeroot ldid
-        # ldid might need to be installed manually if not available via apt
-        # wget -qO- https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_iphoneos-arm64 > ldid
-        # sudo install -m 755 ldid /usr/local/bin/ldid
+        sudo apt-get install -y dpkg fakeroot
+        # Download and install ldid manually
+        wget -qO- https://github.com/ProcursusTeam/ldid/releases/download/v2.1.5-procursus7/ldid_iphoneos-arm64 > ldid
+        sudo install -m 755 ldid /usr/local/bin/ldid || { echo "Failed to install ldid"; exit 1; }
 
     - name: Verify dependencies installation
       run: |
         dpkg --version || { echo "Failed to verify dpkg"; exit 1; }
         fakeroot --version || { echo "Failed to verify fakeroot"; exit 1; }
-        ldid -h || { echo "Failed to verify ldid"; exit 1; }
+        ldid -h || { echo "ldid installation failed"; exit 1; }
 
     - name: Build dylib
       run: |
