--- a/.github/workflows/o.yml
+++ b/.github/workflows/o.yml
@@ -1,54 +1,113 @@
-name: Build and Release Tweak
+#!/bin/bash
 
-on:
-  workflow_dispatch: # Manual trigger
-  push:
-    branches:
-      - main
+# --- Variables ---
+PROJECT_NAME="SystemInfo"
+DYLIB_NAME="CMDX.dylib"
+DEB_PACKAGE="$PROJECT_NAME.deb"
+TWEAK_DIR="tmp_tweak"
+LOGOS_OUTPUT="Tweak.x.m"
+MOBILEPROVISION="BDG.mobileprovision"  # Explicitly set to BDG.mobileprovision
+ENTITLEMENTS="entitlements.plist"      # Temporary file for extracted entitlements
 
-jobs:
-  build:
-    runs-on: macos-latest
+# --- Functions ---
+function check_command {
+    command -v "$1" >/dev/null 2>&1 || { echo >&2 "Command $1 not found. Please install it."; exit 1; }
+}
 
-    steps:
-      - uses: actions/checkout@v3
+# --- Check for necessary commands ---
+check_command security
+check_command swiftc
+check_command dpkg-deb
+check_command ldid
+check_command PlistBuddy  # Needed to extract entitlements from .mobileprovision
 
-      - name: Install Dependencies
-        run: |
-          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          brew update
-          brew install ldid dpkg Logos
+# --- Ensure Logos is installed ---
+if ! command -v logos &> /dev/null
+then
+    echo "Logos not found. Installing Logos using Homebrew..."
+    brew install logos
+fi
 
-      - name: Clean and Set Up Build Directory
-        run: |
-          rm -rf build_dir
-          mkdir -p build_dir
-          chmod 777 build_dir
-          cp CMDX.sh control entitlements.plist BDG.p12 build_dir
-          cp CPUInfoProvider.swift FloatingButton.swift InfoWindow.swift MemoryInfoProvider.swift SystemInfo.swift build_dir
-          cp Tweak.x build_dir
-          cd build_dir
-          echo "BDG" > p12_password.txt
+# --- Extract Entitlements from BDG.mobileprovision ---
+if [ ! -f "$MOBILEPROVISION" ]; then
+    echo "Error: $MOBILEPROVISION not found. Please ensure BDG.mobileprovision exists in the current directory."
+    exit 1
+fi
 
-      - name: Build Tweak
-        run: |
-          cd build_dir
-          bash CMDX.sh
+echo "Extracting entitlements from $MOBILEPROVISION..."
+# Decode the .mobileprovision and extract the Entitlements dictionary
+security cms -D -i "$MOBILEPROVISION" > decoded_provision.plist
+/usr/libexec/PlistBuddy -x -c "Print Entitlements" decoded_provision.plist > "$ENTITLEMENTS" 2>/dev/null
+if [ $? -ne 0 ]; then
+    echo "Error: Failed to extract entitlements from $MOBILEPROVISION."
+    rm decoded_provision.plist  # Clean up even on failure
+    exit 1
+fi
+rm decoded_provision.plist  # Clean up temporary file
 
-      - name: List build_dir contents
-        run: |
-          ls -la build_dir
+# --- Logos Processing ---
+if ! logos Tweak.xm > "$LOGOS_OUTPUT"; then
+    echo "Error: Logos processing failed."
+    exit 1
+fi
 
-      - name: Zip build_dir
-        run: |
-          cd build_dir
-          zip -r build_dir.zip .
+# --- Compilation ---
+if ! swiftc -target arm64-apple-ios14.0 \
+    -emit-library \
+    CPUInfoProvider.swift \
+    MemoryInfoProvider.swift \
+    InfoWindow.swift \
+    FloatingButton.swift \
+    SystemInfo.swift \
+    "$LOGOS_OUTPUT" \
+    -o "$DYLIB_NAME" \
+    -framework UIKit \
+    -framework Foundation \
+    -framework CoreGraphics; then
+    echo "Error: Compilation failed."
+    exit 1
+fi
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: build_dir/build_dir.zip
-          tag_name: Beta # Set the tag name to Beta
-          name: Beta # Set the release name to Beta
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# --- Tweak Packaging ---
+
+# Create the tweak directory structure
+mkdir -p "$TWEAK_DIR/Library/MobileSubstrate/DynamicLibraries"
+mkdir -p "$TWEAK_DIR/DEBIAN"
+
+# Copy the dynamic library if it exists
+if [ -f "$DYLIB_NAME" ]; then
+    cp "$DYLIB_NAME" "$TWEAK_DIR/Library/MobileSubstrate/DynamicLibraries/$DYLIB_NAME"
+else
+    echo "Error: $DYLIB_NAME not found."
+    exit 1
+fi
+
+# Ensure the control file ends with a newline
+if ! tail -c1 control | read -r _ || [ -z "$REPLY" ]; then
+    echo "" >> control
+fi
+
+# Copy the control file
+cp control "$TWEAK_DIR/DEBIAN/control"
+
+# Create a dummy Tweak.x (or copy the original)
+cp Tweak.x "$TWEAK_DIR/Library/MobileSubstrate/DynamicLibraries/Tweak.x"
+
+# Create the .deb package
+if ! dpkg-deb -b "$TWEAK_DIR" "$DEB_PACKAGE"; then
+    echo "Error: Failed to create .deb package."
+    exit 1
+fi
+
+# --- Code Signing ---
+
+# Sign the dylib with ldid using the extracted entitlements from BDG.mobileprovision
+if ! ldid -S"$ENTITLEMENTS" "$TWEAK_DIR/Library/MobileSubstrate/DynamicLibraries/$DYLIB_NAME"; then
+    echo "Error: Code signing failed."
+    exit 1
+fi
+
+# --- Cleanup ---
+rm -f "$ENTITLEMENTS"  # Remove temporary entitlements file
+
+echo "Build complete. Output: $DEB_PACKAGE"
